# textrix

./: LICENSE  README.md  __init__.py  setup.cfg  textrix.py
.github/workflow/: publish.yml
textrix.egg-info/: PKG-INFO  SOURCES.txt
