[metadata]
name = textrix
version = 0.1.0
author = Dozkooki
author_email = dozkooki@example.com
description = A fun Python library for text effects (typing, rainbow, glitch, colors).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DozKooki/textrix
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
